--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
+<app-navbar></app-navbar>
 <app-header></app-header>
-<app-landing-page></app-landing-page>
-<app-pokemon-list></app-pokemon-list>
+<router-outlet></router-outlet>
 
